--- a/src/index.css
+++ b/src/index.css
@@ -65,57 +65,18 @@
 .logo-container:hover {
   transform: translate(-7px, -4px);
 }
-/* @layer utilities {
-  .clip-hexagon {
-    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  }
 
-  .animate-hueRotate {
-    animation: hueRotate 4s linear infinite;
+@keyframes spin-slow {
+  0% {
+    transform: rotate(0deg);
   }
-
-  @keyframes hueRotate {
-    0% {
-      filter: hue-rotate(0deg);
-    }
-    100% {
-      filter: hue-rotate(360deg);
-    }
+  100% {
+    transform: rotate(360deg);
   }
-} */
-/* .skills-main {
-  display: flex;
-  --s: 100px;
-  --m: 4px;
-  --f: calc(1.732 * var(--s) + 4 * var(--m) - 1px);
 }
-.skills-container {
-  font-size: 0;
+.animate-spin-slow {
+  animation: spin-slow 2s linear infinite;
 }
-.skills-container div {
-  width: var(--s);
-  margin: var(--m);
-  height: calc(var(--s) * 1.1547);
-  display: inline-block;
-  font-size: initial;
-  clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
-  background: red;
-  margin-bottom: calc(var(--m) - var(--s) * 0.2885);
-}
-
-.skills-container div:nth-child(odd) {
-  background: green;
-}
-.skills-container::before {
-  content: "";
-  width: calc(var(--s) / 2 + var(--m));
-  float: left;
-  height: 120%;
-  shape-outside: repeating-linear-gradient(
-    #0000 0 calc(var(--f) - 3px),
-    #000 0 var(--f)
-  );
-} */
 
 .develop-icon {
   position: relative;
